--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,1 +1,135 @@
+:root {
+  --primary-color: #ffcc66;
+  --secondary-color: #2f3b54;
+  --text-shadow-color: #c3a6ff;
+}
 
+html {
+  font-size: 16px;
+  line-height: 1.6;
+}
+
+body {
+  height: 100vh;
+  margin: 0 3em;
+  background-color: var(--secondary-color);
+  font-family: 'Space Mono', monospace;
+  color: var(--primary-color);
+}
+
+h1 {
+  font-size: 3.6em;
+  font-family: 'Playfair Display', serif;
+  /* letter-spacing: 0.6px; */
+  line-height: 1.4;
+}
+
+a {
+  color: var(--primary-color);
+  text-decoration: none;
+  padding-bottom: 4px;
+  border-bottom: 2px solid var(--primary-color);
+  color: inherit;
+  transition: background 0.1s cubic-bezier(.33, .66, .66, 1);
+}
+
+a:hover {
+  background: var(--primary-color);
+  color: var(--secondary-color);
+  border-top: 2px solid var(--primary-color);
+}
+
+a:focus {
+  outline: 3px dotted var(--primary-color);
+  border-bottom: none;
+  text-shadow: 2px 2px var(--text-shadow-color);
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+li {
+  padding-top: .75em;
+  line-height: 2;
+}
+
+nav p {
+  float: left;
+  padding-top: .75em;
+}
+
+nav ul {
+  text-align: right;
+  margin-left: -1.388889%;
+  margin-right: -1.388889%;
+}
+
+nav li {
+  display: inline-block;
+  padding-left: 1.388889%;
+  padding-right: 1.388889%;
+}
+
+main:focus {
+  outline: none;
+}
+
+.link-list {
+  margin-bottom: 2em;
+}
+
+#about {
+  margin-top: 5em;
+  margin-bottom: 2.5em;
+}
+
+#skip-link {
+  position: absolute;
+  top: -999vw;
+  background: var(--primary-color);
+  color: var(--secondary-color);
+  padding: .75em 1.5em;
+}
+
+#skip-link:focus {
+  top: 1em;
+  left: 50%;
+  transform: translate(-50%);
+  outline: none;
+  box-shadow: 0 0 0 5px var(--secondary-color), 0 0 0 10px var(--primary-color);
+}
+
+.bold {
+  font-family: 'Space Mono', monospace;
+  font-weight: 700;
+  margin-bottom: 0;
+}
+
+body.safari h1 {
+  letter-spacing: -0.05em;
+}
+
+@media screen and (max-width: 580px) {
+  body {
+    margin: 0 0.25em;
+  }
+
+  h1 {
+    font-size: 2.8em;
+    line-height: 1.25;
+  }
+
+  #about {
+    margin-top: 0;
+  }
+
+  nav li {
+    display: block;
+  }
+
+  .space-75 {
+    min-width: 100%;
+  }
+}
